--- a/ResearchHabits.Rmd
+++ b/ResearchHabits.Rmd
@@ -31,13 +31,11 @@ What you should know but probably don't\pause
 ###
 Listen up, young padawans
 
-
-# Managing references
+# Citing
 
 ## Managing references
 
 \placefig{7.4}{1.4}{width=5.1cm}{Mendeley}
-
 
 \begin{textblock}{6.}(.4,1.2)
 \begin{alertblock}{Mendeley}\fontsize{11}{12}\sf
@@ -64,9 +62,7 @@ Listen up, young padawans
 
 ## Managing references
 
-
 \placefig{6.7}{3}{width=6.1cm}{Zotero}
-
 
 \begin{textblock}{6.}(.4,1.2)
 \begin{alertblock}{Zotero}\fontsize{11}{12}\sf
@@ -95,7 +91,6 @@ Listen up, young padawans
 
 \placefig{6.7}{2}{width=6.1cm}{Paperpile}
 
-
 \begin{textblock}{6.}(.4,1.2)
 \begin{alertblock}{Paperpile}\fontsize{12}{12}\sf
 \begin{itemize}\itemsep=1.mm
@@ -119,49 +114,51 @@ Listen up, young padawans
 \end{block}
 \end{textblock}
 
-# Reproducibility
+## What to cite?
 
-## Reproducibility
+\placefig{6.7}{0.}{width=6.2cm}{pileofbooks}\vspace*{0.6cm}
 
-Someone (possibly future you) should be able to reproduce your thesis from your repository without having to guess what software you had installed, what software versions, which files do what, etc.
+\begin{textblock}{6.5}(0,1.5)
+\begin{itemize}\parskip=0cm
+\item Cite what is important.
+\item Cite (only) what is relevant.
+%\item  Cite papers from the journal you intend to submit to.
+\item  Avoid lists of gratuitous references.
+\item  Include proper citations for all packages and software you use.
+\end{itemize}
+\end{textblock}\pause
 
-Stay organized.
+\vspace*{6.3cm}
 
-One system for doing this using R is to write your thesis in an Rmarkdown file.
+```r
+citation("packagename")
+```
 
-Track software versions:
+## Sight what you cite
 
-\begin{block}{}
-\texttt{\textasciigrave{}\textasciigrave{}\textasciigrave{}\{r\ setup,\ include=FALSE\}}\newline
-\texttt{knitr::opts\_chunk\$set(echo=FALSE)\ writeLines(capture.output(sessionInfo()),}\newline
-\texttt{\hspace*{1cm}   "sessionInfo.txt")}\newline
-\texttt{\textasciigrave{}\textasciigrave{}\textasciigrave{}}
-\end{block}
+\placefig{7.4}{5.4}{width=5.4cm}{bibliography}\vspace*{0.6cm}\vspace*{-0.4cm}
+\begin{textblock}{12}(0.2,1.3)
+\begin{itemize}\parskip=0cm
+\item Every article cited should be sighted, \& preferably \rlap{read.}
+ \item  At the very least, check that the article cited really does say what you think it says.
+ \item  Type the reference information yourself.
+ \item  Don’t just cite what other people say about citations.
+ \item  Store accurate reference\newline info from the start.
+ \item  Give credit where it is due.
 
+ \only<2>{
+   \begin{itemize}
+   \item Diebold did not invent PITs.
+   \item Hyndman did not invent\newline exponential smoothing or\newline ARIMA models.
+   \end{itemize}}
+\end{itemize}
+\end{textblock}
 
-# Google scholar
+# Searching
 
 ## Use Google Scholar for more than searching
 
 \placefig{0}{1.33}{width=12.8cm, height=13cm}{gsfront}
-
-\only<2>{\placefig{.6}{1.2}{width=2cm}{select}}
-
-## Use Google Scholar for more than searching
-
-\placefig{0}{1.33}{width=12.8cm, height=13cm}{gscholar}
-
-
-\only<2>{\begin{textblock}{7.7}(2,5)
-\begin{block}{}
-\begin{itemize}
-\item Set up a GS profile.
-\item Keep your GS profile up to date.
-\item Follow key authors.
-\end{itemize}
-\end{block}
-\end{textblock}}
-
 
 ## Use Google Scholar for more than searching
 
@@ -176,6 +173,24 @@ Track software versions:
 \end{block}
 \end{textblock}}
 
+## Use Google Scholar for more than searching
+
+\placefig{0}{1.33}{width=12.8cm, height=13cm}{oddstream}
+
+\only<2>{\placefig{2.6}{6.4}{width=2cm}{select}}
+
+
+## Use Google Scholar for more than searching
+
+\placefig{0}{1.33}{width=12.8cm, height=13cm}{gscholar}
+
+
+## Use Google Scholar for more than searching
+
+\placefig{0}{1.33}{width=12.8cm, height=13cm}{oddstream}
+
+\only<2>{\placefig{.9}{7.3}{width=2cm}{select}}
+
 
 ## Use Google Scholar for more than searching
 
@@ -183,64 +198,44 @@ Track software versions:
 
 \only<2>{\placefig{2.2}{1.2}{width=2cm}{select}}
 
-
 ## Use Google Scholar for more than searching
 
 \placefig{0}{1.33}{width=12.8cm, height=13cm}{gslibrary}
 
-
 ## Use Google Scholar for more than searching
 \placefig{0}{1.33}{width=12.8cm, height=13cm}{gsfront}
-
 
 \only<2->{\placefig{2.4}{5.6}{width=2.4cm}{select}}
 
 
-# Citations
+# Plotting
 
-## What to cite?
+## Some rules for good graphics
+\fontsize{14}{16}\sf
 
-\placefig{6.7}{0.}{width=6.2cm}{pileofbooks}\vspace*{0.6cm}
+1. Design graphics to highlight comparisons you want the reader to make.
+1. Choose scales to facilitate comparisons.
+1. Use a sensible aspect ratio. width:height of about 1.6, unless axes are on the same scale.
+1. Prepare graphics in final aspect ratio. Distorted fonts look awful.
+1. Use vector graphics such as eps or pdf.
+1. Clear labels and detailed captions.
+1. Avoid cluttered legends.
+1. Specify units.
+1. Label axes.
 
-\begin{textblock}{6.5}(0,1.5)
-\begin{itemize}
-\item Cite what is important.
-\item Cite (only) what is relevant.
-\item  Cite papers from the journal you intend to submit to.
-\item  Avoid lists of gratuitous references.
-\item  Include proper citations for all packages you use.
-\end{itemize}
-\end{textblock}\pause
+## IJF graphics examples
 
-\vspace*{6.3cm}
+\placefig{0.5}{1.5}{height=8cm, width=15cm}{fig1}
 
-```r
-citation("packagename")
-```
+## IJF graphics examples
 
+\placefig{0.5}{1.5}{height=8cm, width=12cm}{fig2}
 
-## Sight what you cite
+## IJF graphics examples
 
-\placefig{7.4}{5.4}{width=5.4cm}{bibliography}\vspace*{0.6cm}\vspace*{-0.4cm}
-\begin{textblock}{12}(0.2,1.3)
-\begin{itemize}
-\item Every article cited should be sighted, \& preferably \rlap{read.}
- \item  At the very least, check that the article cited really does say what you think it says.
- \item  Type the reference information yourself.
- \item  Don’t just cite what other people say about citations.
- \item  Store accurate reference\newline info from the start.
- \item  Give credit where it is due.
+\placefig{0.5}{1.5}{height=8cm, width=15cm}{fig3}
 
- \only<2>{
-   \begin{itemize}
-   \item Diebold did not invent PITs.
-   \item Hyndman did not invent\newline exponential smoothing or ARIMA models.
-   \end{itemize}}
-\end{itemize}
-\end{textblock}
-
-# Writing tools
-
+# Writing
 
 ##
 
@@ -289,16 +284,40 @@ citation("packagename")
 \end{block}
 \end{textblock}
 
+## Reproducibility
 
-##
-\centering
-\begin{alertblock}{Slides and links}\bfseries\Large
-robjhyndman.com/hyndsight/\\
-\hfill{software-for-honours-students/}
-\end{alertblock}
+\begin{block}{}
+Someone should be able to reproduce your thesis without having to guess what software you had installed, what versions, which files do what, etc.
+\end{block}\vspace*{-0.2cm}\pause
 
+ * Stay organized.
+ * One system for doing this using R is to write your thesis in an Rmarkdown file.
+ * Track software versions
 
+\fontsize{12}{12}\sf\vspace*{0.5cm}\pause
 
+\begin{block}{}
+\texttt{\textasciigrave{}\textasciigrave{}\textasciigrave{}\{r\ setup,\ include=FALSE\}}\newline
+\texttt{knitr::opts\_chunk\$set(echo=FALSE)\ writeLines(capture.output(sessionInfo()),}\newline
+\texttt{\hspace*{1cm}   "sessionInfo.txt")}
+\end{block}
+
+## Version control
+\fontsize{13}{15}\sf
+
+ * `thesis_v1`, `thesis_v2`, etc., is not adequate version control.
+ * You need to track changes over time, have a remote repository, and be able to roll back as required.
+ * Your repository should contain *everything* required to produce your thesis including computer code, references, writing.
+ * Someone should be able to reproduce your thesis from your repository without having to guess what software you had installed, what software versions, which files do what, etc.
+ * **Github** solves these problems
+
+\placefig{7.8}{7.5}{width=2.2cm}{github}
+
+## Plagiarism
+
+\placefig{1.4}{1.35}{width=11.4cm, trim=0 3 0 0, clip=true}{plagiarism}\vspace*{6.7cm}
+
+ * Never plagiarise from other papers — not even sentence fragments. Use your own words.
 
 ## Words to avoid
 
@@ -328,7 +347,6 @@ robjhyndman.com/hyndsight/\\
 \placefig{0.6}{1.3}{width=11.5cm}{WCH_title}
 \placefig{0.6}{4.5}{width=11.5cm}{WCH_abstract}
 
-
 ## Writing an abstract
 
 \begin{textblock}{5}(0,1.4)\fontsize{12}{15}\sf
@@ -351,122 +369,15 @@ robjhyndman.com/hyndsight/\\
  * Be explicit, precise and concise.
  * Stick to a single paragraph.
  * Restrict background information to a sentence or two at most.
- * Make sure that your abstract is consistent with what you reported in the paper.
+ * Make sure that your abstract is consistent with what you reported in the thesis.
  * Write the abstract last
 
-# Data analysis and computation
-
-## Using R
-\fontsize{13}{14}\sf
-
-\begin{textblock}{7}(2,0.1)
-\setbeamercolor{whitebox}{bg=white}
-\begin{beamercolorbox}[sep=0mm]{whitebox}
-\includegraphics[width=1cm]{Rlogo}
-\end{beamercolorbox}
-\end{textblock}
-
-\begin{textblock}{6.4}(.6,1.5)
-\setbeamercolor{whitebox}{bg=white}
-\begin{beamercolorbox}[sep=2mm,rounded=true]{whitebox}
-\includegraphics[width=6.1cm]{Rstudio}
-\end{beamercolorbox}
-\end{textblock}
-
-\begin{textblock}{4.7}(7.8,1.2)\fontsize{13}{14}\sf
-\begin{alertblock}{Statistics software}
-\begin{itemize}\itemsep=1.mm
-\item[\textcolor{white}{\ding{229}}] Free and open-source
-\item[\textcolor{white}{\ding{229}}] Available on all operating systems
-\item[\textcolor{white}{\ding{229}}] A language rather than a package
-\item[\textcolor{white}{\ding{229}}] Great graphics
-\item[\textcolor{white}{\ding{229}}] Add-on packages to do almost anything
-%\item[\textcolor{white}{\ding{229}}] Fastest growing computer language
-\item[\textcolor{white}{\ding{229}}] Many jobs now require it
-%\item[\textcolor{white}{\ding{229}}] Many jobs now require it
-\end{itemize}
-\end{alertblock}
-\end{textblock}
-
-\begin{textblock}{6.5}(0.5,6.1)
-\begin{block}{To install:}
-\begin{itemize}
-\item Download R from \url{www.r-project.org}
-\item Download RStudio from \url{www.rstudio.com}
-\end{itemize}
-\end{block}
-\end{textblock}
-
-
-
-
-
-
-
-## Names and titles
-\fontsize{14}{16}\sf
-
- * Your name is your brand. Choose one and stick to it.\pause
-
- * Titles should be informative, short and catchy (in that order).\pause
-
-    - Optimal forecast reconciliation for hierarchical and grouped time series through trace minimization
-    - Exploring the sources of uncertainty: why does bagging for time series forecasting work?
-    - Do levels of airborne grass pollen influence asthma hospital admissions?
-    - Unmasking the Theta method
-    - I am not an econometrician\pause
-
- * Some journals don't like imaginative titles.
-
-## Some rules for good graphics
-\fontsize{14}{16}\sf
-
-1. Design graphics to highlight comparisons you want the reader to make.
-1. Choose scales to facilitate comparisons.
-1. Use a sensible aspect ratio. width:height of about 1.6, unless axes are on the same scale.
-1. Prepare graphics in final aspect ratio. Distorted fonts look awful.
-1. Use vector graphics such as eps or pdf.
-1. Clear labels and detailed captions.
-1. Avoid cluttered legends.
-1. Specify units.
-1. Label axes.
-
-## IJF graphics examples
-
-\placefig{0.5}{1.5}{height=8cm, width=15cm}{fig1}
-
-## IJF graphics examples
-
-\placefig{0.5}{1.5}{height=8cm, width=12cm}{fig2}
-
-## IJF graphics examples
-
-\placefig{0.5}{1.5}{height=8cm, width=15cm}{fig3}
-
-## Plagiarism
-
-\placefig{1.4}{1.35}{width=11.4cm, trim=0 3 0 0, clip=true}{plagiarism}\vspace*{6cm}
-
- * Never plagiarise from other papers — not even sentence fragments. Use your own words.
- * Don’t plagiarise from your own papers either.
-
-## Excuses
-
-\placefig{6.8}{0}{width=6.3cm, height=9.6cm}{htwal}
-\begin{textblock}{6.5}(0,1.4)
-\begin{itemize}
-\item There's not enough time
-\item I need to read more articles before I begin
-\item I need a new computer, a better printer, etc.
-\item I'm waiting for inspiration
-\end{itemize}
-\end{textblock}
 
 ## How to write a lot
 \placefig{6.8}{0}{width=6.3cm, height=9.6cm}{htwal}
 \begin{textblock}{6.5}(0,1.4)
-\begin{itemize}
-\item Block out a regular writing time (e.g., 2 hours every morning).
+\begin{itemize}\itemsep=0cm\parskip=0.1cm
+\item Block out a regular writing time (e.g., 1 hour every morning).
 \item Write something every day.
 \item Set a word or paragraph goal for each session.
 \item Practice makes \st{perfect} better.
@@ -475,16 +386,11 @@ robjhyndman.com/hyndsight/\\
 \end{itemize}
 \end{textblock}
 
-# Version control
+## Resources
 
-## Version control
-\fontsize{13}{15}\sf
+\fontsize{13}{16}\sf
 
- * `thesis_v1`, `thesis_v2`, etc., is not adequate version control.
- * You need to track changes over time, have a remote repository, and be able to roll back as required.
- * Your repository should contain *everything* required to produce your thesis including computer code, references, writing.
- * Someone should be able to reproduce your thesis from your repository without having to guess what software you had installed, what software versions, which files do what, etc.
- * **Github** solves these problems
-
-\placefig{7.8}{7.5}{width=2.2cm}{github}
-
+###
+* **Slides**:\newline `robjhyndman.com/seminars/Honours2018`
+* **Github**:\newline `happygitwithr.com`
+* **Rmarkdown thesis template**:\newline `github.com/robjhyndman/MonashHonoursThesis`
