--- a/ResearchHabits.Rmd
+++ b/ResearchHabits.Rmd
@@ -22,14 +22,22 @@ knitr::opts_chunk$set(echo = FALSE, message=FALSE, warning=FALSE, cache=TRUE,
 
 ## Alternative titles
 
-###
-There's more to being a researcher than writing a thesis\pause
 
-###
-What you should know but probably don't\pause
-
-###
+\begin{textblock}{9}(0.5,1.2)
+\begin{block}{}
+There's more to being a researcher than writing a thesis
+\end{block}
+\only<2->{\begin{block}{}
+What you should know but probably don't
+\end{block}}
+\only<3->{\begin{block}{}
 Listen up, young padawans
+\end{block}}
+\end{textblock}
+
+\vspace*{10cm}
+
+\only<3>{\placefig{8}{4.2}{width=4.8cm}{yoda}}
 
 # Citing
 
@@ -184,6 +192,14 @@ citation("packagename")
 
 \placefig{0}{1.33}{width=12.8cm, height=13cm}{gscholar}
 
+\only<2>{\begin{textblock}{8.7}(3.2,6.4)
+\begin{block}{}
+\begin{itemize}
+\item Create your GS profile once you have (at least) one paper.
+\item Follow key authors in your area.
+\end{itemize}
+\end{block}
+\end{textblock}}
 
 ## Use Google Scholar for more than searching
 
@@ -208,32 +224,81 @@ citation("packagename")
 \only<2->{\placefig{2.4}{5.6}{width=2.4cm}{select}}
 
 
-# Plotting
+# Scripting
 
-## Some rules for good graphics
-\fontsize{14}{16}\sf
+## Reproducibility
 
-1. Design graphics to highlight comparisons you want the reader to make.
-1. Choose scales to facilitate comparisons.
-1. Use a sensible aspect ratio. width:height of about 1.6, unless axes are on the same scale.
-1. Prepare graphics in final aspect ratio. Distorted fonts look awful.
-1. Use vector graphics such as eps or pdf.
-1. Clear labels and detailed captions.
-1. Avoid cluttered legends.
-1. Specify units.
-1. Label axes.
+\begin{textblock}{7.5}(0.2,1.2)\fontsize{14}{15}\sf
+\begin{block}{Not reproducible:}
+\begin{itemize}\tightlist
+\item Data edited in a spreadsheet
+\item Click and point analysis
+\item Copy and paste graphs and tables
+\item Tables typed by hand
+\end{itemize}
+\end{block}
+\begin{alertblock}{Reproducible}
+\begin{itemize}\tightlist
+\item All data edits scripted
+\item All analysis scripted
+\item Graphs and tables automatically pulled in to the thesis
+\item Tables generated with scripts
+\end{itemize}
+\end{alertblock}
+\end{textblock}
 
-## IJF graphics examples
+\placefig{8}{1.3}{width=4.8cm}{2g9914}
 
-\placefig{0.5}{1.5}{height=8cm, width=15cm}{fig1}
 
-## IJF graphics examples
+## Reproducibility
 
-\placefig{0.5}{1.5}{height=8cm, width=12cm}{fig2}
+\begin{block}{}
+Someone should be able to reproduce your thesis without having to guess what software you had installed, what versions, which files do what, etc.
+\end{block}\vspace*{-0.2cm}\pause
 
-## IJF graphics examples
+ * Stay organized.
+ * One system for doing this using R is to write your thesis in an Rmarkdown file.
+ * Track software versions
 
-\placefig{0.5}{1.5}{height=8cm, width=15cm}{fig3}
+\fontsize{12}{12}\sf\vspace*{0.5cm}\pause
+
+\begin{block}{}
+\texttt{\textasciigrave{}\textasciigrave{}\textasciigrave{}\{r\ setup,\ include=FALSE\}}\newline
+\texttt{knitr::opts\_chunk\$set(echo=FALSE)\ writeLines(capture.output(sessionInfo()),}\newline
+\texttt{\hspace*{1cm}   "sessionInfo.txt")}
+\end{block}
+
+## Version control
+
+\full{live-dangerously}
+
+## Version control
+\fontsize{13}{15}\sf
+
+ * `thesis_v1`, `thesis_v2`, etc., is not adequate version control.
+ * You need to track changes over time, have a *remote* repository, and be able to roll back as required.
+ * Your repository should contain *everything* required to produce your thesis including computer code, references, writing.
+ * Your repository should have an obvious structure and be fully documented.
+ * **Github** solves these problems
+ * Read "Happy git with R": `happygitwithr.com`
+
+\placefig{10.5}{7.5}{width=2.2cm}{github}
+
+## Version control with git
+
+ * RStudio integrates with github, so version control is built in.
+ * But github can be used with *any* text-based language including Stata, Python, LaTeX, R, Rmarkdown, markdown, etc.
+ * Git allows you to:
+     - track changes
+     - experiment in branches
+     - undo
+ * Github provides:
+    - backup and restore
+    - synchronisation
+
+
+\placefig{8.5}{5.5}{width=4.2cm}{github}
+
 
 # Writing
 
@@ -284,34 +349,21 @@ citation("packagename")
 \end{block}
 \end{textblock}
 
-## Reproducibility
 
-\begin{block}{}
-Someone should be able to reproduce your thesis without having to guess what software you had installed, what versions, which files do what, etc.
-\end{block}\vspace*{-0.2cm}\pause
+## Microsoft Word
 
- * Stay organized.
- * One system for doing this using R is to write your thesis in an Rmarkdown file.
- * Track software versions
+\placefig{0}{1.1}{width=14cm, height=9cm}{problems}
 
-\fontsize{12}{12}\sf\vspace*{0.5cm}\pause
-
-\begin{block}{}
-\texttt{\textasciigrave{}\textasciigrave{}\textasciigrave{}\{r\ setup,\ include=FALSE\}}\newline
-\texttt{knitr::opts\_chunk\$set(echo=FALSE)\ writeLines(capture.output(sessionInfo()),}\newline
-\texttt{\hspace*{1cm}   "sessionInfo.txt")}
-\end{block}
-
-## Version control
-\fontsize{13}{15}\sf
-
- * `thesis_v1`, `thesis_v2`, etc., is not adequate version control.
- * You need to track changes over time, have a remote repository, and be able to roll back as required.
- * Your repository should contain *everything* required to produce your thesis including computer code, references, writing.
- * Someone should be able to reproduce your thesis from your repository without having to guess what software you had installed, what software versions, which files do what, etc.
- * **Github** solves these problems
-
-\placefig{7.8}{7.5}{width=2.2cm}{github}
+\only<2>{
+	\begin{textblock}{9}(0.2,1.)
+	\begin{block}{}
+	\begin{itemize}\tightlist
+  \item Impossible to do proper version control
+  \item Poor formatting of equations
+  \item Impossible to make reproducible
+  \item More difficult to automate cross-referencing, numbering
+  \item Files more likely to be corrupted
+  \end{itemize}\end{block}\end{textblock}}
 
 ## Plagiarism
 
@@ -333,6 +385,19 @@ Someone should be able to reproduce your thesis without having to guess what sof
  * of course
  * Notice that
 
+## Some rules for good graphics
+\fontsize{14}{16}\sf
+
+1. Design graphics to highlight comparisons you want the reader to make.
+1. Choose scales to facilitate comparisons.
+1. Use a sensible aspect ratio. width:height of about 1.6, unless axes are on the same scale.
+1. Prepare graphics in final aspect ratio. Distorted fonts look awful.
+1. Use vector graphics such as eps or pdf.
+1. Clear labels and detailed captions.
+1. Avoid cluttered legends.
+1. Specify units.
+1. Label axes.
+
 ## Writing an abstract
 \fontsize{15}{19}\sf
 
@@ -350,7 +415,7 @@ Someone should be able to reproduce your thesis without having to guess what sof
 ## Writing an abstract
 
 \begin{textblock}{5}(0,1.4)\fontsize{12}{15}\sf
-\begin{enumerate}
+\begin{enumerate}\tightlist
 \item What did you do?
  \item Why did you do it? What question were you trying to answer?
  \item How did you do it? State your methods.
