--- a/preamble.tex
+++ b/preamble.tex
@@ -5,9 +5,10 @@
 \begin{textblock}{7.5}(1,2)\fontsize{24}{30}\sf
 {\color{white}\raggedright\usebeamerfont{title}\par\inserttitle}
 \end{textblock}
-\begin{textblock}{7.5}(1,7.3)
+\begin{textblock}{10.5}(1,6.7)
 {\color{white}\raggedright{\insertauthor}\\[0.2cm]
-\insertdate}
+\insertdate\\[0.2cm]
+\url{bit.ly/research_habits}}
 \end{textblock}
 }
 
