--- a/ResearchHabits.Rmd
+++ b/ResearchHabits.Rmd
@@ -14,12 +14,19 @@ output:
 ---
 
 ```{r setup1, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, message=FALSE, warning=FALSE, cache=TRUE,
-  dev.args=list(bg=grey(0.9), pointsize=11))
+knitr::opts_chunk$set(
+  echo = FALSE,
+  message = FALSE,
+  warning = FALSE,
+  cache = TRUE,
+  dev.args = list(
+    bg = grey(0.9),
+    pointsize = 11
+  )
+)
 ```
 
 ## Alternative titles
-
 
 \begin{textblock}{9}(0.5,1.2)
 \begin{block}{}
@@ -179,7 +186,6 @@ citation("packagename")
 \only<1>{\full{magic_button}}
 \only<2>{\full{magic_button2}}
 
-
 # Scripting
 
 ## Reproducibility
@@ -204,7 +210,6 @@ citation("packagename")
 \end{textblock}
 
 \placefig{8}{1.3}{width=4.8cm}{2g9914}
-
 
 ## Reproducibility
 
@@ -243,7 +248,6 @@ Someone should be able to reproduce your thesis without having to guess what sof
  * Github provides:
     - backup and restore
     - synchronisation
-
 
 \placefig{8.5}{5.5}{width=4.2cm}{github}
 
@@ -325,7 +329,6 @@ Someone should be able to reproduce your thesis without having to guess what sof
 \includegraphics[width=5cm]{mythesis}
 \end{block}
 \end{textblock}
-
 
 ## Plagiarism
 
