--- a/ResearchHabits.Rmd
+++ b/ResearchHabits.Rmd
@@ -1,8 +1,11 @@
 ---
 title: "Developing Good Research Habits"
 author: "Rob J Hyndman"
-date: "22 March 2022"
+date: "21 March 2023"
 colortheme: monashwhite
+classoption: aspectratio=169
+titlepage: title16x9.png
+titlecolor: burntorange
 toc: true
 output:
   binb::monash:
@@ -28,7 +31,7 @@ knitr::opts_chunk$set(
 
 ## Alternative titles
 
-\begin{textblock}{9}(0.5,1.2)
+\begin{textblock}{9}(0.5,2.2)
 \begin{block}{}
 There's more to being a researcher than writing a thesis
 \end{block}
@@ -42,15 +45,42 @@ Listen up, young padawans
 
 \vspace*{10cm}
 
-\only<3>{\placefig{8}{4.2}{width=4.8cm}{yoda}}
+\only<3>{\placefig{10}{2.2}{width=6cm}{yoda}}
 
 # Citing
 
 ## Managing references
 
-\placefig{7.4}{1.4}{width=5.1cm}{Mendeley}
+\placefig{8.7}{2.6}{width=6.1cm}{Zotero}
 
-\begin{textblock}{6.}(.4,1.2)
+\begin{textblock}{7.}(.4,1.3)
+\begin{alertblock}{Zotero\phantom{y}}\fontsize{12}{12}\sf
+\begin{itemize}\itemsep=1.mm
+\item[\textcolor{white}{\ding{229}}] Free and on all operating systems
+\item[\textcolor{white}{\ding{229}}] Web-version and local version synced
+\item[\textcolor{white}{\ding{229}}] Browser extension for adding papers/books
+\item[\textcolor{white}{\ding{229}}] Attach notes and annotations to papers.
+\item[\textcolor{white}{\ding{229}}] Works with Word, LibreOffice or LaTeX.
+\item[\textcolor{white}{\ding{229}}] Generate bibliography automatically
+\item[\textcolor{white}{\ding{229}}] Handles all formatting for you.
+\end{itemize}
+\end{alertblock}
+\end{textblock}
+
+\begin{textblock}{7.7}(7.9,6.64)\fontsize{12}{13}\sf
+\begin{block}{To install:}
+\begin{itemize}
+\item Set up account at \url{www.zotero.org}
+\item Download from \url{www.zotero.org}
+\end{itemize}
+\end{block}
+\end{textblock}\vspace*{10cm}
+
+## Managing references
+
+\placefig{9.2}{1.6}{width=5.3cm}{Mendeley}
+
+\begin{textblock}{7.}(.4,1.3)
 \begin{alertblock}{Mendeley}\fontsize{12}{12}\sf
 \begin{itemize}\itemsep=1.mm
 \item[\textcolor{white}{\ding{229}}] Free and on all operating systems
@@ -64,7 +94,7 @@ Listen up, young padawans
 \end{alertblock}
 \end{textblock}
 
-\begin{textblock}{5.3}(7.1,6.2)\fontsize{12}{13}\sf
+\begin{textblock}{7.7}(7.9,6.64)\fontsize{12}{13}\sf
 \begin{block}{To install:}
 \begin{itemize}
 \item Set up account at \url{www.mendeley.com}
@@ -75,38 +105,11 @@ Listen up, young padawans
 
 ## Managing references
 
-\placefig{6.7}{3}{width=6.1cm}{Zotero}
+\placefig{8.7}{2.6}{width=6.1cm}{Paperpile}
 
-\begin{textblock}{6.}(.4,1.2)
-\begin{alertblock}{Zotero}\fontsize{12}{12}\sf
-\begin{itemize}\itemsep=1.mm
-\item[\textcolor{white}{\ding{229}}] Free and on all operating systems
-\item[\textcolor{white}{\ding{229}}] Web-version and local version synced
-\item[\textcolor{white}{\ding{229}}] Browser extension for adding papers/books
-\item[\textcolor{white}{\ding{229}}] Attach notes and annotations to papers.
-\item[\textcolor{white}{\ding{229}}] Works with Word, LibreOffice or LaTeX.
-\item[\textcolor{white}{\ding{229}}] Generate bibliography automatically
-\item[\textcolor{white}{\ding{229}}] Handles all formatting for you.
-\end{itemize}
-\end{alertblock}
-\end{textblock}
-
-\begin{textblock}{5.3}(7.1,6.2)\fontsize{12}{13}\sf
-\begin{block}{To install:}
-\begin{itemize}
-\item Set up account at \url{www.zotero.org}
-\item Download from \url{www.zotero.org}
-\end{itemize}
-\end{block}
-\end{textblock}\vspace*{10cm}
-
-## Managing references
-
-\placefig{6.7}{2}{width=6.1cm}{Paperpile}
-
-\begin{textblock}{6.}(.4,1.2)
+\begin{textblock}{7.}(.4,1.3)
 \begin{alertblock}{Paperpile}\fontsize{12}{12}\sf
-\begin{itemize}\itemsep=1.mm
+\begin{itemize}\itemsep=2.mm
 \item[\textcolor{white}{\ding{229}}] \$3 per month and runs on Google Chrome
 \item[\textcolor{white}{\ding{229}}] Papers stored on Google Drive
 \item[\textcolor{white}{\ding{229}}] Browser extension for adding papers/books
@@ -118,7 +121,7 @@ Listen up, young padawans
 \end{alertblock}
 \end{textblock}
 
-\begin{textblock}{5.3}(7.1,5.6)\fontsize{12}{13}\sf
+\begin{textblock}{7.7}(7.9,6.2)\fontsize{12}{13}\sf
 \begin{block}{To install:}
 \begin{itemize}
 \item Set up account at \url{paperpile.com}
@@ -129,7 +132,7 @@ Listen up, young padawans
 
 ## What to cite?
 
-\placefig{6.7}{0.}{width=6.2cm}{pileofbooks}\vspace*{0.6cm}
+\placefig{6.7}{0.}{width=9.35cm}{pileofbooks}\vspace*{0.6cm}
 
 \begin{textblock}{6.5}(0,1.5)
 \begin{itemize}\parskip=0cm
@@ -141,7 +144,9 @@ Listen up, young padawans
 \end{itemize}
 \end{textblock}\pause
 
-\vspace*{6.3cm}
+\vspace*{5.2cm}
+
+**When using R**
 
 ```r
 citation("packagename")
@@ -149,14 +154,14 @@ citation("packagename")
 
 ## Sight what you cite
 
-\placefig{7.4}{5.4}{width=5.4cm}{bibliography}\vspace*{0.6cm}\vspace*{-0.4cm}
-\begin{textblock}{12}(0.2,1.3)
+\placefig{10.4}{5.4}{width=5.4cm}{bibliography}\vspace*{0.6cm}\vspace*{-0.4cm}
+\begin{textblock}{14}(0.2,1.3)
 \begin{itemize}\tightlist
-\item Every article cited should be sighted, \& preferably \rlap{read.}
+\item Every article cited should be sighted, \& preferably read.
  \item  At the very least, check that the article cited really does say what you think it says.
  \item  Type the reference information yourself.
  \item  Don’t just cite what other people say about citations.
- \item  Store accurate reference\newline info from the start.
+ \item  Store accurate reference info from the start.
  \item  Give credit where it is due.
 
  \only<2>{
@@ -186,11 +191,15 @@ citation("packagename")
 \only<1>{\full{magic_button}}
 \only<2>{\full{magic_button2}}
 
+## Semantic Scholar
+
+\full{semantic-scholar.png}
+
 # Scripting
 
 ## Reproducibility
 
-\begin{textblock}{7.5}(0.2,1.2)\fontsize{14}{15}\sf
+\begin{textblock}{9.5}(0.5,1.3)\fontsize{14}{15}\sf
 \begin{block}{Not reproducible:}
 \begin{itemize}\tightlist
 \item Data edited in a spreadsheet
@@ -209,7 +218,7 @@ citation("packagename")
 \end{alertblock}
 \end{textblock}
 
-\placefig{8}{1.3}{width=4.8cm}{2g9914}
+\placefig{10.65}{0}{width=5.35cm}{2g9914}
 
 ## Reproducibility
 
@@ -218,12 +227,8 @@ Someone should be able to reproduce your thesis without having to guess what sof
 \end{block}\vspace*{-0.2cm}\pause
 
  * Stay organized.
- * One system for doing this using R is to write your thesis in an Rmarkdown file.
+ * One system for doing this using R is to write your thesis in an Rmarkdown or Quarto file.
  * Track software versions
-
-## Version control
-
-\full{live-dangerously}
 
 ## Version control
 \fontsize{13}{15}\sf
@@ -235,12 +240,12 @@ Someone should be able to reproduce your thesis without having to guess what sof
  * **Github** solves these problems
  * Read "Happy git with R": `happygitwithr.com`
 
-\placefig{10.5}{7.5}{width=2.2cm}{github}
+\placefig{11.5}{5.9}{width=3.2cm}{github}
 
 ## Version control with git
 
  * RStudio integrates with github, so version control is built in.
- * But github can be used with *any* text-based language including Stata, Python, LaTeX, R, Rmarkdown, markdown, etc.
+ * But github can be used with *any* text-based language including Stata, Python, LaTeX, R, Rmarkdown, Quarto, markdown, etc.
  * Git allows you to:
      - track changes
      - experiment in branches
@@ -249,7 +254,7 @@ Someone should be able to reproduce your thesis without having to guess what sof
     - backup and restore
     - synchronisation
 
-\placefig{8.5}{5.5}{width=4.2cm}{github}
+\placefig{11.5}{5.9}{width=3.2cm}{github}
 
 <!-- ## Some rules for good graphics
 \fontsize{14}{16}\sf
@@ -269,7 +274,7 @@ Someone should be able to reproduce your thesis without having to guess what sof
 
 ## Microsoft Word
 
-\placefig{0}{1.1}{width=14cm, height=9cm}{problems}
+\placefig{4.1}{1.35}{width=11.9cm}{problems}
 
 \only<2>{
   \begin{textblock}{9}(0.2,1.)
@@ -284,9 +289,9 @@ Someone should be able to reproduce your thesis without having to guess what sof
 
 ##
 
-\placefig{.3}{.1}{width=3cm}{latex_logo}
+\placefig{1.3}{1.1}{width=3cm}{latex_logo}
 
-\begin{textblock}{5.8}(6.6,1.2)\fontsize{13}{13}\sf
+\begin{textblock}{7.8}(7.6,.5)\fontsize{13}{13}\sf
 \begin{alertblock}{Document processing}
 \begin{itemize}\itemsep=1.mm
 \item[\textcolor{white}{\ding{229}}] Free and open-source
@@ -301,7 +306,7 @@ Someone should be able to reproduce your thesis without having to guess what sof
 \end{alertblock}
 \end{textblock}
 
-\begin{textblock}{5.5}(.4,4.5)
+\begin{textblock}{5.5}(.7,3.5)
 \begin{block}{To install:}
 \begin{itemize}
 \item Download MikTeX, MacTeX or TeXlive.
@@ -312,14 +317,15 @@ Someone should be able to reproduce your thesis without having to guess what sof
 
 ## RMarkdown
 
-\begin{textblock}{5.5}(6.5,1.3)
+\begin{textblock}{9}(6.2,1.5)
 \begin{alertblock}{RMarkdown}
 \begin{itemize}\itemsep=1.5mm
 \item[\textcolor{white}{\ding{229}}] Combines R and LaTeX into one system
 \item[\textcolor{white}{\ding{229}}] Reproducible research
 \item[\textcolor{white}{\ding{229}}] Monash Honours Template via \texttt{monash} package \\
-{\fontsize{10}{10}\tt{github.com/numbats/\rlap{monash}}}
+{\fontsize{14}{14}\tt{github.com/numbats/\rlap{monash}}}
 \item[\textcolor{white}{\ding{229}}] Useful for assignments too
+\item[\textcolor{white}{\ding{229}}] See \url{rmarkdown.rstudio.com} for help
 \end{itemize}
 \end{alertblock}
 \end{textblock}
@@ -330,12 +336,35 @@ Someone should be able to reproduce your thesis without having to guess what sof
 \end{block}
 \end{textblock}
 
+
+## Quarto
+
+\begin{textblock}{9}(6.2,1.5)
+\begin{alertblock}{Quarto}
+\begin{itemize}\itemsep=1.5mm
+\item[\textcolor{white}{\ding{229}}] Combines R, Python  and LaTeX into one system
+\item[\textcolor{white}{\ding{229}}] Reproducible research
+\item[\textcolor{white}{\ding{229}}] Monash Thesis Template via\\
+\url{github.com/numbats/monash-quarto-thesis}
+\item[\textcolor{white}{\ding{229}}] Useful for assignments too
+\item[\textcolor{white}{\ding{229}}] See \url{quarto.org} for help
+\end{itemize}
+\end{alertblock}
+\end{textblock}
+
+\begin{textblock}{5}(.6,1.3)
+\begin{block}{}
+\includegraphics[width=5cm]{quarto-thesis}
+\end{block}
+\end{textblock}
+
+
 ## Plagiarism
 
-\placefig{1.4}{1.35}{width=11.4cm, trim=0 3 0 0, clip=true}{plagiarism}\vspace*{6.7cm}
+\placefig{1.4}{1.35}{width=11.4cm, trim=0 3 0 0, clip=true}{plagiarism}\vspace*{5.8cm}
 
  * Never plagiarise from other papers — not even sentence fragments. Use your own words.
-<!-- 
+<!--
 ## Words to avoid
 
 **According to Andrew Gelman**
@@ -389,7 +418,7 @@ Someone should be able to reproduce your thesis without having to guess what sof
  * Make sure that your abstract is consistent with what you reported in the thesis.
  * Write the abstract last
  -->
-<!-- 
+<!--
 ## How to write a lot
 \placefig{6.8}{0}{width=6.3cm, height=9.6cm}{htwal}
 \begin{textblock}{6.5}(0,1.4)
@@ -406,9 +435,8 @@ Someone should be able to reproduce your thesis without having to guess what sof
 
 ## Resources
 
-\fontsize{13}{16}\sf
+\fontsize{20}{36}\sf
 
-###
-* **Slides**:\newline `bit.ly/research_habits`
-* **Github**:\newline `happygitwithr.com`
-* **Rmarkdown thesis template**:\newline `github.com/numbats/monash`
+**Slides and links**:
+
+`bit.ly/research_habits`
