--- a/beamercolorthememonashwhite.sty
+++ b/beamercolorthememonashwhite.sty
@@ -7,6 +7,7 @@
 \definecolor{LightGrey}{RGB}{231,231,231}
 \definecolor{MonashBlue}{RGB}{0, 99, 167}
 \definecolor{Orange}{RGB}{204, 89, 0}
+\definecolor{shadecolor}{RGB}{225,225,225}
 
 \setbeamercolor{alerted text}{fg=Orange}
 \setbeamercolor{block body alerted}{fg=black,bg=DarkYellow}
@@ -14,7 +15,7 @@
 \setbeamercolor{block title alerted}{fg=white,bg=black}
 \setbeamercolor{block title}{fg=white,bg=MonashBlue}
 \setbeamercolor{description item}{fg=Orange}
-\setbeamercolor{enumerate item}{fg=Orange,bg=LightGrey}
+\setbeamercolor{enumerate item}{fg=Orange,bg=white}
 \setbeamercolor{enumerate subitem}{fg=Orange!50!yellow,bg=DarkGrey}
 \setbeamercolor{frametitle}{bg=MonashBlue,fg=white}
 \setbeamercolor{itemize item}{fg=Orange}
