--- a/preamble.tex
+++ b/preamble.tex
@@ -1,40 +1,10 @@
-% Monash title page
-\setbeamerfont{title}{series=\bfseries,parent=structure,size=\fontsize{24}{60}}
-\setbeamertemplate{title page}
-{\placefig{-0.01}{-0.01}{width=1.01\paperwidth,height=1.01\paperheight}{title16x9}
-    \begin{textblock}{7.5}(1,2.5)\setstretch{2}
-    {\color{burntorange}\raggedright\usebeamerfont{title}\inserttitle}
-    \end{textblock}
-    \begin{textblock}{10.5}(1,6.4)\setstretch{1}
-        {\color{burntorange}\raggedright{\insertauthor}\\[0.2cm]
-                \insertdate\\[0.2cm]
-                \url{bit.ly/research_habits}}
-    \end{textblock}
-}
-% Packages
-\usepackage{bm,booktabs,tabularx,setspace}
-\usepackage{animate,soul}
-\usepackage{fontawesome}
-
-% Figures
-\graphicspath{{figs/}}
-
-% Fonts
-\fontsize{13}{15}\sf
-\usepackage[scale=0.85]{sourcecodepro}
-\DisableLigatures{encoding = T1, family = tt*}
-\usepackage{pifont}
-\ifcsname Shaded\endcsname
-  \definecolor{shadecolor}{RGB}{225,225,225}
-  \renewenvironment{Shaded}{\color{black}\fontsize{10}{10}\sf\begin{snugshade}\color{black}}{\end{snugshade}}
-\fi
+\usepackage{fontawesome,pifont}
 
 % Colors
 \setbeamercolor{description item}{fg=Orange}
 \definecolor{burntorange}{rgb}{0.8, 0.33, 0.0}
 
 % Graphics
-\graphicspath{{figs/}}
 \def\full#1{\par\centerline{\includegraphics[height=8.2cm,width=12.8cm,keepaspectratio=true]{#1}}}
 
 \setbeamertemplate{frametitle continuation}{}
